@@ -146,6 +146,9 @@ public class SolrIndexSearcher extends IndexSearcher implements Closeable,SolrIn
    */
   private final Set<String> nonStoredDVsUsedAsStored;
 
+  /** Contains the names/patterns of all docValues=true,stored=false fields, excluding those that are copyField targets in the schema. */
+  private final Set<String> nonStoredDVsWithoutCopyTargets;
+
   private Collection<String> storedHighlightFieldNames;
   private DirectoryFactory directoryFactory;
 
@@ -302,6 +305,7 @@ public class SolrIndexSearcher extends IndexSearcher implements Closeable,SolrIn
     fieldNames = new HashSet<>();
     Set<String> nonStoredDVsUsedAsStored = new HashSet<>();
     Set<String> allNonStoredDVs = new HashSet<>();
+    Set<String> nonStoredDVsWithoutCopyTargets = new HashSet<>();
     fieldInfos = leafReader.getFieldInfos();
     for(FieldInfo fieldInfo : fieldInfos) {
       fieldNames.add(fieldInfo.name);
@@ -311,11 +315,15 @@ public class SolrIndexSearcher extends IndexSearcher implements Closeable,SolrIn
           nonStoredDVsUsedAsStored.add(fieldInfo.name);
         }
         allNonStoredDVs.add(fieldInfo.name);
+        if (!schema.isCopyFieldTarget(schemaField)) {
+          nonStoredDVsWithoutCopyTargets.add(fieldInfo.name);
+        }
       }
     }
 
     this.nonStoredDVsUsedAsStored = Collections.unmodifiableSet(nonStoredDVsUsedAsStored);
     this.allNonStoredDVs = Collections.unmodifiableSet(allNonStoredDVs);
+    this.nonStoredDVsWithoutCopyTargets = Collections.unmodifiableSet(nonStoredDVsWithoutCopyTargets);
 
     // We already have our own filter cache
     setQueryCache(null);
@@ -876,6 +884,13 @@ public class SolrIndexSearcher extends IndexSearcher implements Closeable,SolrIn
    */
   public Set<String> getNonStoredDVs(boolean onlyUseDocValuesAsStored) {
     return onlyUseDocValuesAsStored ? nonStoredDVsUsedAsStored : allNonStoredDVs;
+  }
+
+  /**
+   * Returns an unmodifiable set of names of non-stored docValues fields, except those that are targets of a copy field.
+   */
+  public Set<String> getNonStoredDVsWithoutCopyTargets() {
+    return nonStoredDVsWithoutCopyTargets;
   }
 
   /* ********************** end document retrieval *************************/
